# ssh_proxy

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/ssh-proxy/: Cargo.toml  build.rs
crates/ssh-proxy-cli/: Cargo.toml
crates/ssh-proxy-cli/src/: cli.rs
crates/ssh-proxy-cli/src/cli/: config.rs  daemon.rs  intents.rs  node.rs  proxy.rs  remote.rs  reverse.rs  route.rs  service.rs  shared.rs  tests.rs
crates/ssh-proxy-config/: Cargo.toml
crates/ssh-proxy-config/src/: io.rs  lib.rs  peer.rs  profile_defaults.rs  schema.rs  store.rs
crates/ssh-proxy-control/: Cargo.toml
crates/ssh-proxy-control/src/: control_socket.rs  lib.rs
crates/ssh-proxy-control/src/control_socket/: windows_pipe.rs
crates/ssh-proxy-daemon/: Cargo.toml
crates/ssh-proxy-daemon/src/: control.rs  job.rs  lib.rs  peer.rs  report.rs  session.rs  session_spec.rs  state.rs  update.rs
crates/ssh-proxy-deploy/: Cargo.toml
crates/ssh-proxy-deploy/src/: commands.rs  install.rs  lib.rs  remote_admin.rs  remote_setup.rs  remote_setup_scripts.rs
crates/ssh-proxy-platform/: Cargo.toml
crates/ssh-proxy-platform/src/: lib.rs  systemd.rs  windows_tasks.rs
crates/ssh-proxy-route/: Cargo.toml
crates/ssh-proxy-route/src/: conflict.rs  decision.rs  lib.rs  plan.rs  policy.rs  preflight.rs  remote_use.rs  status.rs
crates/ssh-proxy-service/: Cargo.toml
crates/ssh-proxy-service/src/: broker.rs  health.rs  lib.rs  status.rs
crates/ssh-proxy-ssh/: Cargo.toml
crates/ssh-proxy-ssh/src/: auth.rs  client.rs  lib.rs
crates/ssh-proxy-transport/: Cargo.toml
crates/ssh-proxy-transport/src/: lib.rs  peer_transport.rs  quic.rs  quic_stream.rs  remote_helper.rs  server.rs  spx.rs
crates/ssh-proxy-transport/src/proxy/: http.rs  socks5.rs
crates/ssh-proxy-transport/src/remote_helper/: client.rs
crates/ssh-proxy-transport/tests/: http_proxy.rs
crates/ssh-proxy/src/: cli.rs  config.rs  control_socket.rs  controller.rs  daemon.rs  deploy.rs  diagnostics.rs  install_report.rs  main.rs  node_daemon.rs  paths.rs  peer_transport.rs  protocol.rs  protocol_core.rs  quic_native.rs  quic_stream.rs  remote.rs  repair.rs  reverse.rs  route.rs  service.rs  socks.rs  ssh_auth.rs  ssh_client.rs  ssh_native.rs
crates/ssh-proxy/src/cli/: control.rs  route.rs  tests.rs
crates/ssh-proxy/src/config/: diagnostics.rs  io.rs  peer.rs  profile.rs  schema.rs
crates/ssh-proxy/src/controller/: control_client.rs  runner.rs  status.rs
crates/ssh-proxy/src/deploy/: defaults.rs  descriptor.rs  helper.rs  host.rs  install.rs  profile_record.rs  remote_commands.rs  token.rs  transport.rs
crates/ssh-proxy/src/node_daemon/: args.rs  control_protocol.rs  control_server.rs  handoff.rs  jobs.rs  management.rs  peers.rs  proxy_session.rs  quic_transport.rs  remote_peer.rs  remote_setup.rs  remote_ssh.rs  report.rs  routes.rs  state.rs  transport.rs  windows_service_runner.rs
crates/ssh-proxy/src/node_daemon/control_protocol/: payload_adapter.rs  response.rs
crates/ssh-proxy/src/node_daemon/management/: report.rs  update.rs
crates/ssh-proxy/src/node_daemon/peers/: compatibility.rs  reconciliation.rs  registry.rs  route_intent.rs
crates/ssh-proxy/src/node_daemon/proxy_session/: apply_settings.rs  job_runner.rs  route_ready.rs  spec.rs  state_machine.rs  status.rs
crates/ssh-proxy/src/node_daemon/remote_peer/: job_runner.rs  phase_mapping.rs  report.rs
crates/ssh-proxy/src/node_daemon/remote_setup/: artifacts.rs  executor.rs  payload.rs  shell.rs
crates/ssh-proxy/src/node_daemon/routes/: conflict_policy.rs  runtime_metadata.rs  store.rs  supervisor.rs  time_util.rs
crates/ssh-proxy/src/node_daemon/state/: daemon_store.rs  file_store.rs  session_store.rs
crates/ssh-proxy/src/peer_lifecycle/: artifacts.rs  commands.rs  config.rs  connection.rs  context.rs  executor.rs  health.rs  provider.rs  report.rs  service_provider.rs  spec.rs  store.rs  workflow.rs
crates/ssh-proxy/src/peer_lifecycle/executor/: local.rs  ssh.rs
crates/ssh-proxy/src/peer_lifecycle/provider/: launchd.rs  systemd.rs  windows_scm.rs
crates/ssh-proxy/src/peer_lifecycle/service_provider/: contract.rs  kind.rs  plans.rs  selection.rs  status.rs  tests.rs
crates/ssh-proxy/src/peer_lifecycle/workflow/: events.rs  model.rs  runner.rs  tests.rs
crates/ssh-proxy/src/protocol_core/: codec.rs  control.rs  envelope.rs  peer.rs  redaction.rs  report.rs
crates/ssh-proxy/src/quic_native/: control.rs  metrics.rs  runtime.rs  runtime_config.rs  runtime_status.rs
crates/ssh-proxy/src/quic_native/runtime/: connection.rs  control_loop.rs  listener.rs  metrics_snapshot.rs  status.rs  stream.rs  worker_metrics.rs
crates/ssh-proxy/src/quic_native/runtime/status/: render.rs
crates/ssh-proxy/src/remote/: admin.rs
crates/ssh-proxy/src/remote/egress/: proxy_endpoint.rs
crates/ssh-proxy/src/route/: builders.rs  policy.rs  preflight.rs  request.rs  response.rs  runtime_decision.rs  selection.rs  tests.rs  transport.rs
crates/ssh-proxy/src/service/: broker.rs  health.rs  inventory.rs  labels.rs  plan.rs  platform.rs  report.rs  status.rs
crates/ssh-proxy/src/service/platform/: command.rs  launchd.rs  probe.rs  systemd.rs  windows_schtasks.rs  windows_scm.rs
crates/ssh-proxy/src/socks/: http.rs  relay.rs  socks5.rs  tunnel.rs
crates/ssh-proxy/src/ssh_native/: control.rs  listener.rs  metrics_guard.rs  scheduler.rs  status.rs
crates/ssh-proxy/tests/: build_contract.rs  cli.rs  node_daemon_control.rs  node_daemon_routes.rs  remote_e2e.rs  transport_matrix.rs  transport_smoke.rs
crates/ssh-proxy/tests/support/: mod.rs  node_daemon.rs
crates/ssh-proxy/tests/support/remote_e2e/: command.rs  config.rs  mod.rs  sandbox.rs
crates/ssh-proxy/tests/support/transport_matrix/: bench.rs  command.rs  config.rs  mod.rs  remote.rs  report.rs  workload.rs
docs/: architecture.md  license.md  operations.md  release.md  repository.md  service-provider-evaluation.md  testing.md
scripts/: bench-remote-transports.ps1  bench-reverse-egress.ps1  check-all.sh  (+13 more)
(+263 files in other folders)
