[package]
name = "ssh-proxy-config"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ssh-proxy-core.workspace = true
toml.workspace = true
whoami.workspace = true
