[package]
name = "ssh-proxy-daemon"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ssh-proxy-core.workspace = true
ssh-proxy-protocol.workspace = true
