[package]
name = "ssh-proxy-deploy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json.workspace = true
ssh-proxy-config.workspace = true
ssh-proxy-core.workspace = true
ssh-proxy-lifecycle.workspace = true
