[package]
name = "ssh-proxy-ssh"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
dirs.workspace = true
russh.workspace = true
ssh-proxy-core.workspace = true
tokio.workspace = true
tracing.workspace = true
whoami.workspace = true
