[package]
name = "ssh_proxy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
directories.workspace = true
dirs.workspace = true
getrandom.workspace = true
mimalloc.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ssh-proxy-cli.workspace = true
ssh-proxy-config.workspace = true
ssh-proxy-control.workspace = true
ssh-proxy-core.workspace = true
ssh-proxy-daemon.workspace = true
ssh-proxy-deploy.workspace = true
ssh-proxy-lifecycle.workspace = true
ssh-proxy-platform.workspace = true
ssh-proxy-protocol.workspace = true
ssh-proxy-route.workspace = true
ssh-proxy-service.workspace = true
ssh-proxy-ssh.workspace = true
ssh-proxy-transport.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami.workspace = true

[dev-dependencies]
rcgen.workspace = true

[build-dependencies]
sha2.workspace = true
